# aggRSquare

./: CMakeLists.txt  README.md  install.sh
src/: DosageFile.cpp  DosageFile.h  Main.cpp  RSquare.cpp  RSquare.h  UserVariables.h  aggBin.h
